--- a/templates/admin/project-view.html
+++ b/templates/admin/project-view.html
@@ -19,7 +19,7 @@
 								</ul>
 							</div>
 							<div class="col-auto float-right ml-auto">
-								<button class="btn add-btn" onclick="editProject({{projectdetailview.id}})"><i class="las la-lg la-pen-alt"></i> Edit Project</button>
+								<button class="btn add-btn" onclick="editProject({{projectdetailview.id}})"><i class="las la-lg la-edit"></i> Edit Project</button>
 							</div>
 						</div>
 					</div>
