--- a/templates/employee/navigationpanel.html
+++ b/templates/employee/navigationpanel.html
@@ -97,6 +97,8 @@
                 <li><a href="{% url 'EmpLeaves' user.id %}"><i class="las la-calendar-minus"></i><span>Leaves</span></a></li>
                 <li><a href="{% url 'EmpDepartmentView' %}"><i class="las la-building"></i><span>Departments</span></a></li>
                 <li><a href="{% url 'EmpDesignationView' %}"><span>Designations</span></a></li>
+                <li><a href=""><i class="las la-code"></i><span>Technology</span></a></li>
+                <li><a href="{% url 'EmpProfileView' user.id %}"><i class="las la-user"></i><span>Profile</span></a></li>
 <!--                <li><a href="clients"><span>Clients</span></a></li>-->
 <!--                <li><a href="leads.html"><span>Leads</span></a></li>-->
                 <!--							<li>-->
