--- a/templates/admin/navigationpanel.html
+++ b/templates/admin/navigationpanel.html
@@ -16,9 +16,9 @@
     <div class="sidebar-inner slimscroll">
         <div class="sidebar-menu" id="sidebar-menu">
             <ul>
-                <li><a href="{% url 'AdminIndex' %}"><i class="lar la-user-circle"></i><span>Admin Dashboard</span></a></li>
+                <li><a href="{% url 'AdminIndex' %}"><i class="las la-home"></i><span>Admin Dashboard</span></a></li>
                 <li class="menu-title"><span>Employee</span></li>
-                <li><a href="{% url 'AdminEmployeeView' %}"><i class="las la-users"></i><span>Employee List </span></a></li>
+                <li><a href="{% url 'AdminEmployeeView' %}"><i class="las la-user-tie"></i><span>Employee List </span></a></li>
                 <li><a href="{% url 'AdminLeaveList' %}"><i class="las la-calendar-minus"></i><span>Leave List</span></a></li>
                 <li><a href="{% url 'AdminHolidays' %}"><i class="las la-calendar-day"></i><span>Holiday</span></a></li>
                 <li><a href="{% url 'AdminDepartmentView' %}"><i class="las la-building"></i><span>Department</span></a></li>
