1. edit functionality add in profile page(profile-info,personal-info) 2. add education model, technology model 3. changes acording new changes in every modual  (employee side, admin side) 4. set edit,add and delete functionality in technology model

--- a/templates/admin/edit_project.html
+++ b/templates/admin/edit_project.html
@@ -45,9 +45,14 @@
                                 {{ form.project_cost|as_crispy_field }}
                             </div>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-3">
                             <div class="form-group">
                                 {{ form.project_priority|as_crispy_field }}
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="form-group">
+                                {{ form.project_status|as_crispy_field }}
                             </div>
                         </div>
                     </div>
