--- a/templates/admin/leaves.html
+++ b/templates/admin/leaves.html
@@ -23,35 +23,6 @@
 					</div>
 					<!-- /Page Header -->
 					
-					<!-- Leave Statistics -->
-					<div class="row">
-						<div class="col-md-3">
-							<div class="stats-info">
-								<h6>Today Presents</h6>
-								<h4>12 / 60</h4>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="stats-info">
-								<h6>Planned Leaves</h6>
-								<h4>8 <span>Today</span></h4>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="stats-info">
-								<h6>Unplanned Leaves</h6>
-								<h4>0 <span>Today</span></h4>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="stats-info">
-								<h6>Pending Requests</h6>
-								<h4>12</h4>
-							</div>
-						</div>
-					</div>
-					<!-- /Leave Statistics -->
-					
 					<!-- Search Filter -->
 					<div class="row filter-row">
 					   <div class="col-sm-6 col-md-3 col-lg-3 col-xl-2 col-12">  
@@ -125,7 +96,7 @@
 											<td>
 												<h2 class="table-avatar">
 													<a href="profile.html" class="avatar"><img alt="" src="assets/img/profiles/avatar-09.jpg"></a>
-													<a href="#">{{leave.leave_user}} <span>{{leave.leave_user.designation}}</span></a>
+													<a href="#">{{leave.leave_user}} <span>{{leave.leave_user.designation}}. {{leave.leave_user.technology}}</span></a>
 												</h2>
 											</td>
 											<td>{{leave.leave_type}}</td>
