--- a/templates/admin/add_employee.html
+++ b/templates/admin/add_employee.html
@@ -47,7 +47,12 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                {{ form.department|as_crispy_field }}
+                                {{ form.designation|as_crispy_field }}
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                {{ form.technology|as_crispy_field }}
                             </div>
                         </div>
                     </div>
