--- a/templates/admin/add_project.html
+++ b/templates/admin/add_project.html
@@ -47,6 +47,7 @@
                         <div class="col-sm-6">
                             <div class="form-group">
                                 {{ form.project_priority|as_crispy_field }}
+                                {{ form.project_status|as_crispy_field }}
                             </div>
                         </div>
                     </div>
