--- a/templates/admin/add_technology.html
+++ b/templates/admin/add_technology.html
@@ -1,20 +1,22 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
-<!-- Profile Modal -->
-<div id="edit_personal_info_model" class="modal fade" role="dialog" tabindex="-1" aria-hidden="true" aria-labelledby="editModelToggleLabel">
+<!-- Add Technology Modal -->
+<div id="add_technology_model" class="modal fade" role="dialog" tabindex="-1" aria-hidden="true" aria-labelledby="editModelToggleLabel">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Personal Information</h5>
+                <h3 class="modal-title">Add Technology</h3>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <form action="{% url 'AdminEditPersonalInfo' edit_personal_info.id %}" method="POST" id="form">
+                <form method="post" action="{% url 'AdminAddTechnology' %}" enctype="multipart/form-data">
                     {% csrf_token %}
-                    {{form|crispy}}
+                    <div class="form-group">
+                        {{ form|crispy }}
+                    </div>
                     <div class="submit-section">
                         <button class="btn btn-primary submit-btn" type="submit">Submit</button>
                     </div>
@@ -23,4 +25,6 @@
         </div>
     </div>
 </div>
-<!-- /Profile Modal -->
+<!-- /Add Technology Modal -->
+
+
