--- a/templates/admin/edit_designation.html
+++ b/templates/admin/edit_designation.html
@@ -14,10 +14,7 @@
             <div class="modal-body">
                 <form>
                     <div class="form-group">
-                        {{ form.designation_name|as_crispy_field }}
-                    </div>
-                    <div class="form-group">
-                        {{ form.department|as_crispy_field }}
+                        {{ form|crispy }}
                     </div>
                     <div class="submit-section">
                         <button class="btn btn-primary submit-btn" type="submit">Save</button>
