--- a/templates/admin/edit_technology.html
+++ b/templates/admin/edit_technology.html
@@ -1,30 +1,29 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
-<!-- Add Designation Modal -->
-<div id="add_designation_model" class="modal fade" role="dialog" tabindex="-1" aria-hidden="true" aria-labelledby="editModelToggleLabel">
+<!-- Edit Technology Modal -->
+<div id="edit_technology_model" class="modal fade" role="dialog" tabindex="-1" aria-hidden="true" aria-labelledby="editModelToggleLabel">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h3 class="modal-title">Add Designation</h3>
+                <h3 class="modal-title">Edit Technology</h3>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <form method="post" action="{% url 'AdminAddDesignation' %}" enctype="multipart/form-data">
-                    {% csrf_token %}
+                <form>
                     <div class="form-group">
                         {{ form|crispy }}
                     </div>
                     <div class="submit-section">
-                        <button class="btn btn-primary submit-btn" type="submit">Submit</button>
+                        <button class="btn btn-primary submit-btn" type="submit">Save</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
 </div>
-<!-- /Add Designation Modal -->
+<!-- /Edit Technology Modal -->
 
 
