--- a/templates/employee/edit_personal_info.html
+++ b/templates/employee/edit_personal_info.html
@@ -1,22 +1,20 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
-<!-- Add Designation Modal -->
-<div id="add_designation_model" class="modal fade" role="dialog" tabindex="-1" aria-hidden="true" aria-labelledby="editModelToggleLabel">
+<!-- Profile Modal -->
+<div id="edit_personal_info_model" class="modal fade" role="dialog" tabindex="-1" aria-hidden="true" aria-labelledby="editModelToggleLabel">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h3 class="modal-title">Add Designation</h3>
+                <h3 class="modal-title">Personal Information</h3>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <form method="post" action="{% url 'AdminAddDesignation' %}" enctype="multipart/form-data">
+                <form action="{% url 'EmpEditPersonalInfo' edit_personal_info.id %}" method="POST" id="form">
                     {% csrf_token %}
-                    <div class="form-group">
-                        {{ form|crispy }}
-                    </div>
+                    {{form|crispy}}
                     <div class="submit-section">
                         <button class="btn btn-primary submit-btn" type="submit">Submit</button>
                     </div>
@@ -25,6 +23,4 @@
         </div>
     </div>
 </div>
-<!-- /Add Designation Modal -->
-
-
+<!-- /Profile Modal -->
