--- a/templates/employee/edit_profile_info.html
+++ b/templates/employee/edit_profile_info.html
@@ -1,20 +1,18 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
-
-
 <!-- Profile Modal -->
 <div id="edit_profile_info_model" class="modal fade" role="dialog" tabindex="-1" aria-hidden="true" aria-labelledby="editModelToggleLabel">
     <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Profile Information</h5>
+                <h3 class="modal-title">Profile Information</h3>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <form action="{% url 'AdminEditProfileInfo' edit_profile_info.id %}" method="POST" id="form">
+                <form action="{% url 'EmpEditProfileInfo' edit_profile_info.id %}" method="POST" id="form">
                     {% csrf_token %}
                     <div class="row">
                         <div class="col-md-12">
@@ -58,14 +56,19 @@
                                 {{ form.date_joined|as_crispy_field }}
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <div class="form-group">
                                 {{ form.department|as_crispy_field }}
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <div class="form-group">
                                 {{ form.designation|as_crispy_field }}
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                {{ form.technology|as_crispy_field }}
                             </div>
                         </div>
                     </div>
