--- a/templates/employee/profile.html
+++ b/templates/employee/profile.html
@@ -3,10 +3,10 @@
 {% block body %}
 			<!-- Page Wrapper -->
             <div class="page-wrapper">
-			
+
 				<!-- Page Content -->
                 <div class="content container-fluid">
-				
+
 					<!-- Page Header -->
 					<div class="page-header">
 						<div class="row">
@@ -20,24 +20,20 @@
 						</div>
 					</div>
 					<!-- /Page Header -->
-					
+
 					<div class="card mb-0">
 						<div class="card-body">
 							<div class="row">
 								<div class="col-md-12">
 									<div class="profile-view">
-										<div class="profile-img-wrap">
-											<div class="profile-img">
-												<a href="#"><img alt="Admin 1 image" src=""></a>
-											</div>
-										</div>
 										<div class="profile-basic">
 											<div class="row">
 												<div class="col-md-5">
 													<div class="profile-info-left">
 														<h3 class="user-name m-t-0 mb-0">{{user_details.username}}</h3>
 														<h6 class="text-muted">{{user_details.department}}</h6>
-														<small class="text-muted">{{user_details.designation}}</small>
+														<small class="text-muted">{{user_details.designation}}</small>.
+														<small class="text-muted">{{user_details.technology}}</small>
 														<div class="staff-id">Employee ID : FT-0001</div>
 														<div class="small doj text-muted">Date of Join : {{user_details.date_joined|date:'d F Y'}}</div>
 													</div>
@@ -54,7 +50,7 @@
 														</li>
 														<li>
 															<div class="title">Birthday</div>
-															<div class="text">24th July</div>
+															<div class="text">{{user_details.dob|date:'d F Y'}}</div>
 														</li>
 														<li>
 															<div class="title">Address</div>
@@ -62,47 +58,51 @@
 														</li>
 														<li>
 															<div class="title">Gender</div>
-															<div class="text">Male</div>
+															<div class="text">{{user_details.gender}}</div>
 														</li>
 													</ul>
 												</div>
 											</div>
 										</div>
-										<div class="pro-edit"><a data-target="#profile_info" data-toggle="modal" class="edit-icon" href="#"><i class="fa fa-pencil"></i></a></div>
+										<div class="pro-edit">
+											<button class="edit-icon" onclick="editProfileInfo({{user_details.id}})"><i class="fa fa-pencil"></i></button>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-					
+
+
 					<div class="tab-content">
-					
+
 						<!-- Profile Info Tab -->
-						<div id="emp_profile" class="pro-overview tab-pane fade show active">
+						<div id="emp_user_details" class="pro-overview tab-pane fade show active">
 							<div class="row">
 								<div class="col-md-6 d-flex">
-									<div class="card profile-box flex-fill">
+									<div class="card user_details-box flex-fill">
 										<div class="card-body">
-											<h3 class="card-title">Personal Informations</h3>
+											<button class="edit-icon" onclick="editPersonalInfo({{user_details.id}})"><i class="fa fa-pencil"></i></button>
+											<h3 class="card-title">Personal Information</h3>
 											<ul class="personal-info">
 												<li>
 													<div class="title">Nationality</div>
-													<div class="text">Indian</div>
+													<div class="text">{{user_details.nationality}}</div>
 												</li>
 												<li>
 													<div class="title">Religion</div>
-													<div class="text">Christian</div>
+													<div class="text">{{user_details.religion}}</div>
 												</li>
 												<li>
 													<div class="title">Marital status</div>
-													<div class="text">Married</div>
+													<div class="text">{{user_details.marital_status}}</div>
 												</li>
 											</ul>
 										</div>
 									</div>
 								</div>
 								<div class="col-md-6 d-flex">
-									<div class="card profile-box flex-fill">
+									<div class="card user_details-box flex-fill">
 										<div class="card-body">
 											<h3 class="card-title">Bank information</h3>
 											<ul class="personal-info">
@@ -133,9 +133,10 @@
 							</div>
 							<div class="row">
 								<div class="col-md-6 d-flex">
-									<div class="card profile-box flex-fill">
+									<div class="card user_details-box flex-fill">
 										<div class="card-body">
-											<h3 class="card-title">Education Informations </h3>
+											<button class="edit-icon" onclick="editEducationInfo({{user_details.id}})"><i class="fa fa-pencil"></i></button>
+											<h3 class="card-title">Education Information</h3>
 											<div class="experience-box">
 												<ul class="experience-list">
 													<li>
@@ -168,8 +169,9 @@
 									</div>
 								</div>
 								<div class="col-md-6 d-flex">
-									<div class="card profile-box flex-fill">
+									<div class="card user_details-box flex-fill">
 										<div class="card-body">
+											<button class="edit-icon" onclick="editExperienceInfo({{user_details.id}})"><i class="fa fa-pencil"></i></button>
 											<h3 class="card-title">Experience</h3>
 											<div class="experience-box">
 												<ul class="experience-list">
@@ -214,7 +216,7 @@
 							</div>
 							<div class="row">
 								<div class="col-md-12 d-flex">
-									<div class="card profile-box flex-fill">
+									<div class="card user_details-box flex-fill">
 										<div class="card-body">
 											<h3 class="card-title">Emergency Contact</h3>
 											<div class="d-flex">
@@ -259,194 +261,59 @@
 							</div>
 						</div>
 						<!-- /Profile Info Tab -->
-						
+
 					</div>
                 </div>
 				<!-- /Page Content -->
-				
-				<!-- Profile Modal -->
-				<div id="profile_info" class="modal custom-modal fade" role="dialog">
-					<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-						<div class="modal-content">
-							<div class="modal-header">
-								<h5 class="modal-title">Profile Information</h5>
-								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-									<span aria-hidden="true">&times;</span>
-								</button>
-							</div>
-							<div class="modal-body">
-								<form action="/FillProfileDetails" method="POST">
-									<div class="row">
-										<div class="col-md-12">
-											<div class="profile-img-wrap edit-img">
-												<img class="inline-block" src="">
-												<div class="fileupload btn">
-													<span class="btn-text">edit</span>
-													<input class="upload" type="file" name="adminphoto">
-												</div>
-											</div>
-											<div class="row">
-												<div class="col-md-6">
-													<div class="form-group">
-														<label>Name</label>
-														<input type="text" class="form-control" value="{{user_details.username}}" name="adminname">
-													</div>
-												</div><div class="col-md-6">
-													<div class="form-group">
-														<label>Email</label>
-														<input type="email" class="form-control" value="{{user_details.email}}" name="adminemail">
-													</div>
-												</div>
-												<div class="col-md-6">
-													<div class="form-group">
-														<label>Birth Date</label>
-														<input class="form-control" type="date" value="{{user_details.birthdate}}" name="adminbirthdate">
-													</div>
-												</div>
-												<div class="col-md-6">
-													<div class="form-group">
-														<label>Gender</label>
-														<select class="form-select form-control" name="admingender">
-															<option value="male">Male</option>
-															<option value="female">Female</option>
-														</select>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="row">
-										<div class="col-md-12">
-											<div class="form-group">
-												<label>Address</label>
-												<input type="text" class="form-control" value="{{user_details.address}}" name="adminaddress">
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label>Phone Number</label>
-												<input type="text" class="form-control" value="{{user_details.phone}}" name="adminphone">
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label>Join Date</label>
-												<input class="form-control" type="date" value="{{user_details.date_joined}}" id="adminjoindate" name="adminjoindate">
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label>Department <span class="text-danger">*</span></label>
-												<select class="form-select form-control" name="admindepartment">
-													<option selected hidden value="{{user_details.department.id}}">{{user_details.department}}</option>
-													<option value="1">Web Development</option>
-													<option value="2">IT Management</option>
-													<option value="3">Marketing</option>
-												</select>
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label>Designation <span class="text-danger">*</span></label>
-												<select class="form-select form-control" name="admindesignation">
-													<option selected hidden value="{{user_details.designation.id}}">{{user_details.designation}}</option>
-													<option value="1">Web Designer</option>
-													<option value="2">Web Developer</option>
-													<option value="3">Android Developer</option>
-												</select>
-											</div>
-										</div>
-									</div>
-									<div class="submit-section">
-										<button class="btn btn-primary submit-btn" type="submit">Submit</button>
-									</div>
-								</form>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- /Profile Modal -->
-				
-				<!-- Personal Info Modal -->
-				<div id="personal_info_modal" class="modal custom-modal fade" role="dialog">
-					<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-						<div class="modal-content">
-							<div class="modal-header">
-								<h5 class="modal-title">Personal Information</h5>
-								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-									<span aria-hidden="true">&times;</span>
-								</button>
-							</div>
-							<div class="modal-body">
-								<form>
-									<div class="row">
-										<div class="col-md-6">
-											<div class="form-group">
-												<label>Passport No</label>
-												<input type="text" class="form-control">
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label>Passport Expiry Date</label>
-												<div class="cal-icon">
-													<input class="form-control datetimepicker" type="text">
-												</div>
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label>Tel</label>
-												<input class="form-control" type="text">
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label>Nationality <span class="text-danger">*</span></label>
-												<input class="form-control" type="text">
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label>Religion</label>
-												<div class="cal-icon">
-													<input class="form-control" type="text">
-												</div>
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label>Marital status <span class="text-danger">*</span></label>
-												<select class="select form-control">
-													<option>-</option>
-													<option>Single</option>
-													<option>Married</option>
-												</select>
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label>Employment of spouse</label>
-												<input class="form-control" type="text">
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label>No. of children </label>
-												<input class="form-control" type="text">
-											</div>
-										</div>
-									</div>
-									<div class="submit-section">
-										<button class="btn btn-primary submit-btn">Submit</button>
-									</div>
-								</form>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- /Personal Info Modal -->
+
+				<div id="edit-profile-info-form"></div>
+				<div id="edit-personal-info-form"></div>
+				<div id="edit-education-info-form"></div>
+				<div id="edit-experience-info-form"></div>
 
             </div>
 			<!-- /Page Wrapper -->
+
+<script>
+function editProfileInfo(UserId) {
+    $.ajax({
+        url: "{% url 'EmpEditProfileInfo' id=0 %}".replace(0, UserId),
+        success: function(response) {
+            $("#edit-profile-info-form").html(response);
+            $("#edit_profile_info_model").modal('show');
+        }
+    });
+}
+
+function editPersonalInfo(UserId) {
+    $.ajax({
+        url: "{% url 'EmpEditPersonalInfo' id=0 %}".replace(0, UserId),
+        success: function(response) {
+            $("#edit-personal-info-form").html(response);
+            $("#edit_personal_info_model").modal('show');
+        }
+    });
+}
+
+function editEducationInfo(UserId) {
+    $.ajax({
+        url: "{% url 'EmpEditEducationInfo' id=0 %}".replace(0, UserId),
+        success: function(response) {
+            $("#edit-education-info-form").html(response);
+            $("#edit_education_info_model").modal('show');
+        }
+    });
+}
+
+function editExperienceInfo(UserId) {
+    $.ajax({
+        url: "{% url 'EmpEditExperienceInfo' id=0 %}".replace(0, UserId),
+        success: function(response) {
+            $("#edit-experience-info-form").html(response);
+            $("#edit_experience_info_model").modal('show');
+        }
+    });
+}
+</script>
+
 {% endblock body %}
