1. edit functionality add in profile page(education page, emergency page) 2. add education model 3. set pages profile edit functionality on admin side

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8495,3 +8495,12 @@ ul.comment-list li ul.children {
 	justify-content: center;
 	font-size: 11px;
 }
+
+
+
+
+/* add manually   */
+
+.cursor_pointer {
+    cursor:pointer;
+}
